<resources>
    <string name="app_name">Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_text">クイズアプリ</string>
    <string name="next_text">次へ</string>
    <string name="A1_text">A1_text</string>
    <string name="A2_text">A2_text</string>
    <string name="A3_text">A3_text</string>
    <string name="A4_text">A4_text</string>
    <string name="miss">Yes_title</string>
    <string name="Yes_title">正解数</string>
    <string name="No_title">不正解数</string>
    <string name="quiz_title">問題</string>
    <string name="A1_button">A1_button</string>
    <string name="A2_button">A2_button</string>
    <string name="A3_button">A3_button</string>
    <string name="A4_button">A4_button</string>
    <string name="result">結果</string>
</resources>