<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SubActivity">

    <Button
            android:text="@string/A4_button"
            android:layout_width="360dp"
            android:layout_height="85dp" android:id="@+id/A4"
            app:layout_constraintTop_toBottomOf="@+id/Quiz"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.9"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49" tools:text="@string/A4_button"/>
    <TextView
            android:text="@string/No_title"
            android:layout_width="157dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" android:id="@+id/No"
            tools:text="@string/No_title" android:textSize="36sp"
            app:layout_constraintStart_toEndOf="@+id/Yes"/>
    <TextView
            android:layout_width="157dp"
            android:layout_height="50dp" android:id="@+id/Yes"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/Yes_title" android:textSize="36sp" android:text="@string/Yes_title"/>
    <TextView
            android:layout_width="357dp"
            android:layout_height="94dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/Quiz" android:text="@string/quiz_title" tools:text="@string/quiz_title"
            android:textSize="30sp" android:textAlignment="center" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.3"/>
    <Button
            android:text="@string/A1_button"
            android:layout_width="360dp"
            android:layout_height="85dp" android:id="@+id/A1"
            app:layout_constraintTop_toBottomOf="@+id/Quiz"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.033"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529" tools:text="@string/A1_button"/>
    <Button
            android:text="@string/A3_button"
            android:layout_width="360dp"
            android:layout_height="85dp" android:id="@+id/A3"
            app:layout_constraintTop_toBottomOf="@+id/Quiz"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.614"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529" tools:text="@string/A3_button"/>
    <Button
            android:text="@string/A2_button"
            android:layout_width="360dp"
            android:layout_height="85dp" android:id="@+id/A2"
            app:layout_constraintTop_toBottomOf="@+id/Quiz"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.329"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529" tools:text="@string/A2_button"/>
    <TextView
            android:text="TextView"
            android:layout_width="168dp"
            android:layout_height="55dp" android:id="@+id/timerText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/Quiz" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textAlignment="center" android:textSize="30sp"
            android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/resultButton"
            app:layout_constraintEnd_toStartOf="@+id/timerText" app:layout_constraintTop_toBottomOf="@+id/Yes"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp" android:textSize="24sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>